[tool.poetry]
name = "heygptcli"
version = "0.2.2"
description = ""
authors = ["Rishang <rishang@localhost.com>"]
readme = "README.md"
packages = [
  { include = "heygpt" }
]

[tool.poetry.scripts]
heygpt = "heygpt.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
fastapi = "*"
uvicorn = "*"
typer = "*"
python-dotenv = "^1.0.0"
openai = "*"
rich = "*"
prompt-toolkit = "^3.0.39"
streamlit = "*"
google-generativeai = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
mypy = "^1.3.0"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
