[tool.poetry]
name = "heygptcli"
version = "0.3.3"
description = ""
authors = ["Rishang <rishang@localhost.com>"]
readme = "README.md"
packages = [
  { include = "heygpt" }
]

[tool.poetry.scripts]
heygpt = "heygpt.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
fastapi = "*"
uvicorn = "*"
typer = "*"
python-dotenv = "^1.0.0"
openai = "*"
rich = "*"
prompt-toolkit = "^3.0.39"
streamlit = "*"
google-generativeai = "*"
pyyaml = "^6.0.1"
litellm = "^1.44.14"
pyperclip = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
mypy = "^1.3.0"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
